Resolve all review comments, add screenshot

--- a/index.html
+++ b/index.html
@@ -29,8 +29,8 @@
                         <img src="images/image2.jpg" alt="About Image" id="about-image">
                     </div>
                     <div class="right-sec">
-                        <h1 class="heading-center">About Catering</h1>
-                        <h5 class="heading-center">Tradition since 1889</h5>
+                        <h2 class="heading-center">About Catering</h2>
+                        <h3 class="heading-center">Tradition since 1889</h3>
                         <p>The Catering was founded in blabla by Mr. Smith in lorem ipsum dolor sit 
                             amet, consectetur adipiscing elit consectetur adipiscing elit, sed do 
                             eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad 
@@ -52,32 +52,32 @@
 
                 <div id="menu">
                     <div class="left-side">
-                        <h1 class="heading-center">Our Menu</h1><br>
+                        <h2 class="heading-center">Our Menu</h2><br>
 
-                        <h4>Bread Basket</h4>
+                        <h3>Bread Basket</h3>
                         <p>Assortment of fresh baked fruit breads and muffins 5.50</p><br>
 
-                        <h4>Honey Almond Granola with Fruits</h4>
+                        <h3>Honey Almond Granola with Fruits</h3>
                         <p>Natural cereal of honey toasted oats, raisins, almonds and dates 7.00</p><br>
 
-                        <h4>Belgian Waffle</h4>
+                        <h3>Belgian Waffle</h3>
                         <p>Vanilla flavored batter with malted flour 7.50</p><br>
 
-                        <h4>Scrambled eggs</h4>
+                        <h3>Scrambled eggs</h3>
                         <p>Scrambled eggs, roasted red pepper and garlic, with green onions 7.50</p><br>
 
-                        <h4>Blueberry Pancakes</h4>
+                        <h3>Blueberry Pancakes</h3>
                         <p>With syrup, butter and lots of berries 8.50</p><br>
                     </div>
                     <div class="right-sec">
-                        <img src="images/image3.jpg" alt="About Image" id="about-image">
+                        <img src="images/image3.jpg" alt="Menu Image" id="menu-image">
                     </div>
                 </div>
 
                 <hr>
 
                 <div id="contact">
-                    <h1>Contact</h1><br>
+                    <h2>Contact</h2><br>
                     <p>We offer full-service catering for any event, large or small. We understand your 
                         needs and we will cater the food to satisfy the biggerst criteria of them all, 
                         both look and taste. Do not hesitate to contact us.
@@ -96,7 +96,7 @@
                             <input type="number" placeholder="How many people" name="People" required>
                         </p>
                         <p>
-                            <input type="datetime-local" name="date" placeholder="Date and Time" value="DD-MM-YYYY 00:00" required>
+                            <input type="datetime-local" name="date" value="16/11/2017 20:00" required>
                         </p>
                         <p>
                             <input type="text" name="Message" required placeholder="Message/Special Requirements">
@@ -105,12 +105,9 @@
                             <button type="submit" id="submit-button">SEND MESSAGE</button>
                         </p>
                     </form>
-
                 </div>
-
             </div>
         </div>
-
     </div>
     <footer class="footer-div">
         <p>Powered by <a href="">w3.css</a></p>
